--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.6.9",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-loader-spinner": "^2.3.0",
     "react-router-dom": "^5.0.1",
-    "reset-css": "^4.0.1"
+    "reset-css": "^4.0.1",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
-    "build": "webpack --webpack.prod.config.js",
+    "build": "webpack --config webpack.prod.config.js",
     "develop": "webpack-dev-server --open --color --config webpack.dev.config.js"
   },
   "eslintConfig": {
